--- a/clean_string.ipynb
+++ b/clean_string.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "05a4ecc5-5708-47de-beb5-2ef5cf52a6bb",
    "metadata": {},
    "outputs": [],
@@ -70,21 +70,31 @@
     "from delta.tables import DeltaTable\n",
     "from pyspark.sql.functions import pandas_udf, PandasUDFType\n",
     "import unittest\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql import Row\n",
+    "from pyspark.sql.functions import col, lit, when, udf\n",
+    "from pyspark import SparkContext\n",
+    "from pyspark.ml import Estimator, Model\n",
+    "from pyspark.ml.feature import VectorAssembler, StringIndexer\n",
+    "from pyspark.sql.functions import udf\n",
+    "from pyspark.sql.types import IntegerType, StringType\n",
+    "from pyspark.sql import SQLContext\n",
+    "from pyspark.sql import DataFrame\n",
     "\n",
     "\n",
     "# from openpyxl import Workbook\n",
     "# from openpyxl.styles import PatternFill, Border, Side\n",
     "# !pip install paramiko\n",
     "# log_information=[]\n",
-    "spark = SparkSession.builder \\\n",
-    "    .appName(\"HiveSupportExample\") \\\n",
-    "    .enableHiveSupport() \\\n",
-    "    .getOrCreate()\n"
+    "# spark = SparkSession.builder \\\n",
+    "#     .appName(\"HiveSupportExample\") \\\n",
+    "#     .enableHiveSupport() \\\n",
+    "#     .getOrCreate()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "7f63cdda-1cc6-484c-a03a-4a78d5c31ba3",
    "metadata": {},
    "outputs": [],
@@ -94,12 +104,14 @@
     "\n",
     "import pyspark\n",
     "import pandas as pd\n",
-    "from pyspark.sql import SparkSession"
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.functions import lit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "ac12aea1-0dd6-4c36-accc-2227174f7b92",
    "metadata": {},
    "outputs": [],
@@ -129,25 +141,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "70794b72-ddc7-4d5c-9691-439fa6e2bdee",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original DataFrame:\n",
-      "+------------+---+---------+------------+\n",
-      "|address     |id |name     |status      |\n",
-      "+------------+---+---------+------------+\n",
-      "|Mumbai\\r\\n\\t|1  | Alice   |  Single    |\n",
-      "|Delhi \\n\\t  |2  | Bob     |Married\\n\\t |\n",
-      "|Bangalore\\t |3  | Charlie |  Single\\r\\n|\n",
-      "|Chennai\\t\\r |4  | Diana   |Single      |\n",
-      "|Kolkata\\r\\n |5  | Eve     | Married \\n |\n",
-      "+------------+---+---------+------------+\n",
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'spark' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 10\u001b[0m\n\u001b[0;32m      1\u001b[0m data \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m      2\u001b[0m     {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m1\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m Alice \u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maddress\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMumbai\u001b[39m\u001b[38;5;130;01m\\r\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstatus\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  Single\u001b[39m\u001b[38;5;130;01m\\xa0\u001b[39;00m\u001b[38;5;124m\"\u001b[39m},\n\u001b[0;32m      3\u001b[0m     {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m2\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m Bob \u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maddress\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDelhi\u001b[39m\u001b[38;5;130;01m\\xa0\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstatus\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMarried\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m\"\u001b[39m},\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m      6\u001b[0m     {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m5\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m Eve \u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maddress\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mKolkata\u001b[39m\u001b[38;5;130;01m\\r\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstatus\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m Married \u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m}\n\u001b[0;32m      7\u001b[0m ]\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# Create DataFrame\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mspark\u001b[49m\u001b[38;5;241m.\u001b[39mcreateDataFrame(data)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m# Show the original DataFrame\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOriginal DataFrame:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'spark' is not defined"
      ]
     }
    ],
@@ -170,25 +176,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "979b6f36-01c9-4494-83c4-92e1248cc689",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cleaned DataFrame:\n",
-      "+---------+---+-------+-------+\n",
-      "|address  |id |name   |status |\n",
-      "+---------+---+-------+-------+\n",
-      "|Mumbai   |1  |Alice  |Single |\n",
-      "|Delhi    |2  |Bob    |Married|\n",
-      "|Bangalore|3  |Charlie|Single |\n",
-      "|Chennai  |4  |Diana  |Single |\n",
-      "|Kolkata  |5  |Eve    |Married|\n",
-      "+---------+---+-------+-------+\n",
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m cleaned_df \u001b[38;5;241m=\u001b[39m clean_string(\u001b[43mdf\u001b[49m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCleaned DataFrame:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m cleaned_df\u001b[38;5;241m.\u001b[39mshow(truncate\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
      ]
     }
    ],
@@ -205,7 +205,11 @@
    "id": "ae4216d0-54f5-471e-9f0a-e6aa910c3912",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cleaned_df = clean_string(df)\n",
+    "print(\"Cleaned DataFrame:\")\n",
+    "cleaned_df.show(truncate=False)\n"
+   ]
   }
  ],
  "metadata": {
